# virtuous-mcp

./: .env.example  README.md  pyproject.toml
src/virtuous_mcp/: __init__.py  client.py  endpoints.py  server.py
