[project]
name = "virtuous-mcp"
version = "0.1.0"
description = "Read-only MCP server for Virtuous CRM+ (query and read data only)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
virtuous-mcp = "virtuous_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/virtuous_mcp"]
